# spec-kit

./: README.md  pyproject.toml
scripts/: create-new-feature.sh  setup-config.sh
src/specify_cli/: __init__.py
src/specify_cli/models/: agent.py  implementation_plan.py  migration_state.py  opencode_config.py  project_configuration.py  research_item.py  specification.py  task.py  template.py
src/specify_cli/opencode/agents/: spec_analyzer_agent.py  spec_builder_agent.py  spec_migrator_agent.py  spec_planner_agent.py  spec_researcher_agent.py
src/specify_cli/opencode/commands/: analyze_command.py  migrate_command.py  plan_command.py  research_command.py  spec_command.py  tasks_command.py
src/specify_cli/services/: agent_registry.py  codebase_analyzer.py  command_discovery.py  command_executor.py  command_help.py  command_registry.py  config_schema.json  configuration_service.py  opencode_integration.py  plan_builder.py  research_engine.py  spec_generator.py  task_manager.py
templates/: plan-template.md  project-config.json  spec-template.md  tasks-template.md
templates/command/: plan.md  specify.md  tasks.md
templates/memory/: constitution.md  constitution_update_checklist.md
templates/scripts/: create-new-feature.sh
tests/integration/: test_schema_validation_integration.py
