[project]
name = "opencode-spec-kit"
version = "0.0.2"
description = "OpenCode-exclusive setup tool for Spec-Driven Development"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx",
    "platformdirs",
    "readchar",
    "jsonschema",
]

[project.scripts]
spec = "specify_cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
# Note: Keeping original package name for compatibility